@@ -726,3 +726,6 @@
 	  data drriver from Ken Pettit (2013-11-4).
 	* apps/platform/mikroe-stm32f4:  Updated to use new MTD configuration
 	  driver features.  From Ken Pettit (2013-11-1).
+	* apps/nshlib/nsh.h:  Allow USB trace wihtout a USB console. From
+	  David Sidrane (2013-11-06).
+
